package chapter8_command.exercise.no2;

public interface Command {
    void execute();
}
